--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "chart.js": "^4.4.4",
+    "csv-parser": "^3.0.0",
     "dayjs": "^1.11.13",
     "vue": "^3.4.37",
     "vue-chartjs": "^5.3.1"
